TLENG-TP2/src/tleng/tp2/MusilengParser.java
// Generated from Musileng.g4 by ANTLR 4.4
package tleng.tp2;

	import java.util.HashMap;
	import java.util.Map;
	import java.util.List;
	import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MusilengParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TEMPO=1, COMPAS=2, CONST=3, IGUAL=4, VOZ=5, LPAREN=6, RPAREN=7, LBRACE=8, 
		RBRACE=9, NUMERAL=10, COMA=11, PUNTOYCOMA=12, SLASH=13, REPETIR=14, SILENCIO=15, 
		NOTA=16, PUNTILLO=17, DURACION=18, ALTURA=19, NUM=20, NOMBRE=21, COMENTARIOS=22, 
		WS=23;
	public static final String[] tokenNames = {
		"<INVALID>", "'tempo'", "'compas'", "'const'", "'='", "'voz'", "'('", 
		"')'", "'{'", "'}'", "'#'", "','", "';'", "'/'", "'repetir'", "'silencio'", 
		"'nota'", "'.'", "DURACION", "ALTURA", "NUM", "NOMBRE", "'//(.*?)\r?\n'", 
		"WS"
	};
	public static final int
		RULE_s = 0, RULE_tempos = 1, RULE_elcompas = 2, RULE_constantes = 3, RULE_constante = 4, 
		RULE_melodia = 5, RULE_compases = 6, RULE_repeticion = 7, RULE_compas = 8, 
		RULE_silencio = 9, RULE_nota = 10, RULE_octava = 11;
	public static final String[] ruleNames = {
		"s", "tempos", "elcompas", "constantes", "constante", "melodia", "compases", 
		"repeticion", "compas", "silencio", "nota", "octava"
	};

	@Override
	public String getGrammarFileName() { return "Musileng.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		private Map<String,Integer> constantes = new HashMap<String,Integer>();
		
		public static final int CLICKS_POR_PULSO = 384;
		
		private boolean agregarConstante(String nombre, String valor) {
			if (constantes.containsKey(valor)) {
				constantes.put(nombre,constantes.get(valor));
				return true;
			} else {
				return false;
			}
		}
		
		public static int clicksPorFigura(String altura, IndicacionCompas indicacion) {
			NotaEnum figura = NotaEnum.valueOf(altura);
			int clicksPorRedonda = CLICKS_POR_PULSO * indicacion.tipoNota;
			return clicksPorRedonda / Double.valueOf(4 / figura.getDuracion()).intValue();
		}
		
		private boolean agregarConstante(String nombre, Integer valor) {
			if (constantes.containsKey(nombre)) {
				return false;
			}
			constantes.put(nombre, valor);
			return true;
		}
		
		private boolean validarRepeticiones(int valor) {
			return valor > 0;
		}
		
		private boolean validarDuracion(List<Nota> notas, IndicacionCompas indicacion) {
			Double duracion = 0.0;
			for(Nota nota : notas) {
				duracion += nota.calcularDuracion();
			}
			return duracion.compareTo(indicacion.duracion()) == 0;
		}
		
		private boolean validarAlMenosUnCompas(List<Compas> listaCompases) {
			return !listaCompases.isEmpty();
		}
		
		private boolean validarInstrumento(int instrumento) {
			return instrumento >= 0 && instrumento <= 127;
		}
			
		private boolean validarVoces(List<Voz> voces) {
			return voces.size() >= 0 && voces.size() <= 16;
		}
			
			
		private boolean validarTempo(Tempo tempo) {
			return true;
		}
		
		private void agregarRepetidos(List<Compas> listaCompases, List<Compas> nuevos, int repeticiones) {
			for (int i = 0; i < repeticiones; i++) {
				listaCompases.addAll(nuevos);
			}
		}
		
		public static class IndicacionCompas {
			public int tiempos;
			public int tipoNota;
			public IndicacionCompas(int tiempos, int tipoNota) {
				this.tiempos = tiempos;
				this.tipoNota = tipoNota;
			}
			
			public Double duracion() {
				return tiempos * Double.valueOf(4 / Double.valueOf(tipoNota));
			}
		}
		
		public static class Nota {
			public String duracion;
			public String altura;
			public String alteracion;
			public Integer octava;
			boolean tienePuntillo;
			public Nota(String altura, Integer octava, String duracion, boolean tienePuntillo) {
				this.altura = altura;
				this.octava = octava;
				this.duracion = duracion;
				this.alteracion = alteracion;
				this.tienePuntillo = tienePuntillo;
			}
			
			public Double calcularDuracion() {
				Double duracionNota = NotaEnum.valueOf(this.duracion).getDuracion();
				return duracionNota + (this.tienePuntillo? duracionNota /2 : 0.0);
			}
			
			public boolean isSilencio() {
				return altura == null;
			}
			
			public String notacionAmericana() {
				return NotacionAmericana.notacionAmericana(this.altura)+octava;
			}
			
			public String toString() {
				if (altura != null) {
					return String.format("Nota(%s,%s,%s,%s,%s)", altura, octava, duracion, alteracion, tienePuntillo);			
				} else {
					return String.format("Silencio(%s, %s)", this.duracion, this.tienePuntillo);
				}
			}
			
		}
		
		public enum NotaEnum {
			redonda(4.0),blanca(2.0), negra(1.0),corchea(1/2.0),semicorchea(1/4.0),fusa(1/8.0),semifusa(1/16.0);
			
			private Double duracion;
			
			private NotaEnum(Double duracion) {
				this.duracion = duracion;
			}
			
			public Double getDuracion() {
				return this.duracion;
			}
		}
		
		public static class NotacionAmericana {
			private static Map<String,String> notacionAmericana = new HashMap<String,String>();
			static {
				notacionAmericana.put("do" , "c");
				notacionAmericana.put("re" , "d");
				notacionAmericana.put("mi" , "e");
				notacionAmericana.put("fa" , "f");
				notacionAmericana.put("sol" , "g");
				notacionAmericana.put("la" , "a");
				notacionAmericana.put("si" , "b");
				notacionAmericana.put("do+" , "c+");
				notacionAmericana.put("re+" , "d+");
				notacionAmericana.put("fa+" , "f+");
				notacionAmericana.put("sol+" , "g+");
				notacionAmericana.put("la+" , "a+");
				notacionAmericana.put("si+" , "b+");	
				notacionAmericana.put("do-" , "c-");
				notacionAmericana.put("re-" , "d-");
				notacionAmericana.put("mi-" , "e-");
				notacionAmericana.put("fa-" , "f-");
				notacionAmericana.put("sol-" , "g-");
				notacionAmericana.put("la-" , "a-");
				notacionAmericana.put("si-" , "b-");				
			}
			
			public static String notacionAmericana(String altura) {
				return notacionAmericana.get(altura);
			}
		}
		
		public static class Compas {
			public List<Nota> notas;
			public Compas() {
				this.notas = new ArrayList<Nota>();
			}
			public String toString() {
				return notas.toString();
			}
		}
		
		public static class Voz {
			public int instrumento;
			public List<Compas> compases;
			public Voz(int instrumento, List<Compas> compases) {
				this.instrumento = instrumento;
				this.compases = compases;
			}
			public String toString() {
				return String.format("Voz(instrumento = %s, compaces = {%s})", this.instrumento, this.compases);
			}
		}
		
		public static class Melodia {
			public List<Voz> voces;
			public Melodia(List<Voz> voces) {
				this.voces = voces;
			}
		}
		
		public static class Tempo {
			public String duracion;
			public int cantidad;
			public Tempo(String duracion, int cantidad) {
				this.duracion = duracion;
				this.cantidad = cantidad;
			}
			
			public String toString() {
				return String.format("Tempo = (%s, %s)", cantidad, duracion);
			}
		}
		
		public static class Partitura {
			public Tempo tempo;
			public IndicacionCompas indicacion;
			public List<Voz> voces;
			public Partitura(Tempo tempo, IndicacionCompas indicacion, List<Voz> voces) {
				this.tempo = tempo;
				this.voces = voces;
				this.indicacion = indicacion;
			}
			
			public String toString() {
				return String.format("%s; voces = %s", this.tempo, voces);
			}
		}

	public MusilengParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SContext extends ParserRuleContext {
		public Partitura partitura;
		public TemposContext tempos;
		public ElcompasContext elcompas;
		public MelodiaContext melodia;
		public ElcompasContext elcompas() {
			return getRuleContext(ElcompasContext.class,0);
		}
		public MelodiaContext melodia() {
			return getRuleContext(MelodiaContext.class,0);
		}
		public TemposContext tempos() {
			return getRuleContext(TemposContext.class,0);
		}
		public ConstantesContext constantes() {
			return getRuleContext(ConstantesContext.class,0);
		}
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusilengListener ) ((MusilengListener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusilengListener ) ((MusilengListener)listener).exitS(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_s);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24); ((SContext)_localctx).tempos = tempos();
			setState(25); ((SContext)_localctx).elcompas = elcompas();
			setState(26); constantes();
			setState(27); ((SContext)_localctx).melodia = melodia(((SContext)_localctx).elcompas.indicacion);
			((SContext)_localctx).partitura =  new Partitura(((SContext)_localctx).tempos.tempo, ((SContext)_localctx).elcompas.indicacion, ((SContext)_localctx).melodia.voces);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TemposContext extends ParserRuleContext {
		public Tempo tempo;
		public Token DURACION;
		public Token NUM;
		public TerminalNode NUMERAL() { return getToken(MusilengParser.NUMERAL, 0); }
		public TerminalNode DURACION() { return getToken(MusilengParser.DURACION, 0); }
		public TerminalNode TEMPO() { return getToken(MusilengParser.TEMPO, 0); }
		public TerminalNode NUM() { return getToken(MusilengParser.NUM, 0); }
		public TemposContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tempos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusilengListener ) ((MusilengListener)listener).enterTempos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusilengListener ) ((MusilengListener)listener).exitTempos(this);
		}
	}

	public final TemposContext tempos() throws RecognitionException {
		TemposContext _localctx = new TemposContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_tempos);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30); match(NUMERAL);
			setState(31); match(TEMPO);
			setState(32); ((TemposContext)_localctx).DURACION = match(DURACION);
			setState(33); ((TemposContext)_localctx).NUM = match(NUM);
			((TemposContext)_localctx).tempo =  new Tempo((((TemposContext)_localctx).DURACION!=null?((TemposContext)_localctx).DURACION.getText():null), (((TemposContext)_localctx).NUM!=null?Integer.valueOf(((TemposContext)_localctx).NUM.getText()):0));
			setState(35);
			if (!((((TemposContext)_localctx).NUM!=null?Integer.valueOf(((TemposContext)_localctx).NUM.getText()):0) > 0)) throw new FailedPredicateException(this, "$NUM.int > 0");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElcompasContext extends ParserRuleContext {
		public IndicacionCompas indicacion;
		public Token n1;
		public Token n2;
		public TerminalNode NUMERAL() { return getToken(MusilengParser.NUMERAL, 0); }
		public TerminalNode COMPAS() { return getToken(MusilengParser.COMPAS, 0); }
		public TerminalNode NUM(int i) {
			return getToken(MusilengParser.NUM, i);
		}
		public TerminalNode SLASH() { return getToken(MusilengParser.SLASH, 0); }
		public List<TerminalNode> NUM() { return getTokens(MusilengParser.NUM); }
		public ElcompasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elcompas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusilengListener ) ((MusilengListener)listener).enterElcompas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusilengListener ) ((MusilengListener)listener).exitElcompas(this);
		}
	}

	public final ElcompasContext elcompas() throws RecognitionException {
		ElcompasContext _localctx = new ElcompasContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_elcompas);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37); match(NUMERAL);
			setState(38); match(COMPAS);
			setState(39); ((ElcompasContext)_localctx).n1 = match(NUM);
			setState(40); match(SLASH);
			setState(41); ((ElcompasContext)_localctx).n2 = match(NUM);
			setState(42);
			if (!((((ElcompasContext)_localctx).n1!=null?Integer.valueOf(((ElcompasContext)_localctx).n1.getText()):0) > 0)) throw new FailedPredicateException(this, "$n1.int > 0");
			((ElcompasContext)_localctx).indicacion =  new IndicacionCompas((((ElcompasContext)_localctx).n1!=null?Integer.valueOf(((ElcompasContext)_localctx).n1.getText()):0),(((ElcompasContext)_localctx).n2!=null?Integer.valueOf(((ElcompasContext)_localctx).n2.getText()):0));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantesContext extends ParserRuleContext {
		public ConstanteContext constante(int i) {
			return getRuleContext(ConstanteContext.class,i);
		}
		public List<ConstanteContext> constante() {
			return getRuleContexts(ConstanteContext.class);
		}
		public ConstantesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusilengListener ) ((MusilengListener)listener).enterConstantes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusilengListener ) ((MusilengListener)listener).exitConstantes(this);
		}
	}

	public final ConstantesContext constantes() throws RecognitionException {
		ConstantesContext _localctx = new ConstantesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_constantes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CONST) {
				{
				{
				setState(45); constante();
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstanteContext extends ParserRuleContext {
		public Token n1;
		public Token NUM;
		public Token n2;
		public List<TerminalNode> NOMBRE() { return getTokens(MusilengParser.NOMBRE); }
		public TerminalNode NOMBRE(int i) {
			return getToken(MusilengParser.NOMBRE, i);
		}
		public TerminalNode PUNTOYCOMA() { return getToken(MusilengParser.PUNTOYCOMA, 0); }
		public TerminalNode IGUAL() { return getToken(MusilengParser.IGUAL, 0); }
		public TerminalNode CONST() { return getToken(MusilengParser.CONST, 0); }
		public TerminalNode NUM() { return getToken(MusilengParser.NUM, 0); }
		public ConstanteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constante; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusilengListener ) ((MusilengListener)listener).enterConstante(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusilengListener ) ((MusilengListener)listener).exitConstante(this);
		}
	}

	public final ConstanteContext constante() throws RecognitionException {
		ConstanteContext _localctx = new ConstanteContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constante);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); match(CONST);
			setState(52); ((ConstanteContext)_localctx).n1 = match(NOMBRE);
			setState(53); match(IGUAL);
			setState(58);
			switch (_input.LA(1)) {
			case NUM:
				{
				setState(54); ((ConstanteContext)_localctx).NUM = match(NUM);
				setState(55);
				if (!(agregarConstante((((ConstanteContext)_localctx).n1!=null?((ConstanteContext)_localctx).n1.getText():null), (((ConstanteContext)_localctx).NUM!=null?Integer.valueOf(((ConstanteContext)_localctx).NUM.getText()):0)))) throw new FailedPredicateException(this, "agregarConstante($n1.text, $NUM.int)");
				}
				break;
			case NOMBRE:
				{
				setState(56); ((ConstanteContext)_localctx).n2 = match(NOMBRE);
				setState(57);
				if (!(agregarConstante((((ConstanteContext)_localctx).n1!=null?((ConstanteContext)_localctx).n1.getText():null), (((ConstanteContext)_localctx).n2!=null?((ConstanteContext)_localctx).n2.getText():null)))) throw new FailedPredicateException(this, "agregarConstante($n1.text, $n2.text)");
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(60); match(PUNTOYCOMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MelodiaContext extends ParserRuleContext {
		public IndicacionCompas indicacion;
		public List<Voz> voces;
		public int instrumento;
		public Token NUM;
		public Token NOMBRE;
		public CompasesContext compases;
		public List<TerminalNode> LBRACE() { return getTokens(MusilengParser.LBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(MusilengParser.RBRACE, i);
		}
		public TerminalNode RPAREN(int i) {
			return getToken(MusilengParser.RPAREN, i);
		}
		public List<TerminalNode> NOMBRE() { return getTokens(MusilengParser.NOMBRE); }
		public List<TerminalNode> VOZ() { return getTokens(MusilengParser.VOZ); }
		public TerminalNode NOMBRE(int i) {
			return getToken(MusilengParser.NOMBRE, i);
		}
		public TerminalNode NUM(int i) {
			return getToken(MusilengParser.NUM, i);
		}
		public List<TerminalNode> LPAREN() { return getTokens(MusilengParser.LPAREN); }
		public List<TerminalNode> RBRACE() { return getTokens(MusilengParser.RBRACE); }
		public List<CompasesContext> compases() {
			return getRuleContexts(CompasesContext.class);
		}
		public TerminalNode LPAREN(int i) {
			return getToken(MusilengParser.LPAREN, i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(MusilengParser.RPAREN); }
		public CompasesContext compases(int i) {
			return getRuleContext(CompasesContext.class,i);
		}
		public TerminalNode VOZ(int i) {
			return getToken(MusilengParser.VOZ, i);
		}
		public TerminalNode LBRACE(int i) {
			return getToken(MusilengParser.LBRACE, i);
		}
		public List<TerminalNode> NUM() { return getTokens(MusilengParser.NUM); }
		public MelodiaContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public MelodiaContext(ParserRuleContext parent, int invokingState, IndicacionCompas indicacion) {
			super(parent, invokingState);
			this.indicacion = indicacion;
		}
		@Override public int getRuleIndex() { return RULE_melodia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusilengListener ) ((MusilengListener)listener).enterMelodia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusilengListener ) ((MusilengListener)listener).exitMelodia(this);
		}
	}

	public final MelodiaContext melodia(IndicacionCompas indicacion) throws RecognitionException {
		MelodiaContext _localctx = new MelodiaContext(_ctx, getState(), indicacion);
		enterRule(_localctx, 10, RULE_melodia);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((MelodiaContext)_localctx).voces =  new ArrayList<Voz>();
			setState(80); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(63); match(VOZ);
				setState(64); match(LPAREN);
				setState(70);
				switch (_input.LA(1)) {
				case NUM:
					{
					setState(65); ((MelodiaContext)_localctx).NUM = match(NUM);
					((MelodiaContext)_localctx).instrumento =  (((MelodiaContext)_localctx).NUM!=null?Integer.valueOf(((MelodiaContext)_localctx).NUM.getText()):0);
					}
					break;
				case NOMBRE:
					{
					setState(67); ((MelodiaContext)_localctx).NOMBRE = match(NOMBRE);
					setState(68);
					if (!(constantes.containsKey((((MelodiaContext)_localctx).NOMBRE!=null?((MelodiaContext)_localctx).NOMBRE.getText():null)))) throw new FailedPredicateException(this, "constantes.containsKey($NOMBRE.text)");
					((MelodiaContext)_localctx).instrumento =  constantes.get((((MelodiaContext)_localctx).NOMBRE!=null?((MelodiaContext)_localctx).NOMBRE.getText():null));
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(72); match(RPAREN);
				setState(73); match(LBRACE);
				setState(74); ((MelodiaContext)_localctx).compases = compases(_localctx.indicacion);
				setState(75); match(RBRACE);
				setState(76);
				if (!(validarAlMenosUnCompas(((MelodiaContext)_localctx).compases.listaCompases))) throw new FailedPredicateException(this, "validarAlMenosUnCompas($compases.listaCompases)");
				 _localctx.voces.add(new Voz(_localctx.instrumento, ((MelodiaContext)_localctx).compases.listaCompases));
				setState(78);
				if (!(_localctx.voces.size() <= 16)) throw new FailedPredicateException(this, "$voces.size() <= 16");
				}
				}
				setState(82); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==VOZ );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompasesContext extends ParserRuleContext {
		public IndicacionCompas indicacion;
		public List<Compas> listaCompases;
		public CompasContext compas;
		public CompasesContext c1;
		public RepeticionContext repeticion;
		public RepeticionContext repeticion() {
			return getRuleContext(RepeticionContext.class,0);
		}
		public CompasContext compas() {
			return getRuleContext(CompasContext.class,0);
		}
		public CompasesContext compases() {
			return getRuleContext(CompasesContext.class,0);
		}
		public CompasesContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public CompasesContext(ParserRuleContext parent, int invokingState, IndicacionCompas indicacion) {
			super(parent, invokingState);
			this.indicacion = indicacion;
		}
		@Override public int getRuleIndex() { return RULE_compases; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusilengListener ) ((MusilengListener)listener).enterCompases(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusilengListener ) ((MusilengListener)listener).exitCompases(this);
		}
	}
